# macro_magic

./: Cargo.toml  README.md  publish.sh
.cargo/: config.toml
.github/workflows/: ci.yaml
core/: Cargo.toml  build.rs
core/src/: lib.rs
core_macros/: Cargo.toml
core_macros/src/: lib.rs
level1_macros/: Cargo.toml
level1_macros/src/: lib.rs
level2_macros/: Cargo.toml
level2_macros/src/: lib.rs
macro_helpers/: Cargo.toml
macro_helpers/src/: lib.rs
macros/: Cargo.toml  README.md  build.rs
macros/src/: lib.rs
src/: lib.rs
tests/: Cargo.toml  other_file.rs  re_exports.rs  tests.rs
tests/example_crate/: Cargo.toml
tests/example_crate/src/: lib.rs
tests/example_crate2/: Cargo.toml
tests/example_crate2/src/: lib.rs
tests/example_proc_macro/: Cargo.toml
tests/example_proc_macro/src/: lib.rs
tests/external_crate/: Cargo.toml
tests/external_crate/src/: lib.rs
tests/isolated_crate/: Cargo.toml
tests/isolated_crate/src/: lib.rs
tests/middle_crate/: Cargo.toml
tests/middle_crate/src/: lib.rs
tests/src/: lib.rs  tests.rs
tests/test_macros/: Cargo.toml
tests/test_macros/src/: lib.rs
tests/z_example_crate2/: Cargo.toml
tests/z_example_crate2/src/: lib.rs
token_watcher/: Cargo.toml  rustfmt.toml
token_watcher/src/: lib.rs
