[workspace]
members = [
    "core",
    "macros",
    "tests/example_crate",
    "tests/example_crate2",
    "tests/example_proc_macro",
]

[package]
name = "macro_magic"
version = "0.1.7"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
keywords = ["macro", "macros", "proc-macro", "proc-macros", "magic"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "rust-patterns"]
homepage = "https://sam0x17.dev"
repository = "https://github.com/sam0x17/macro_magic"
description = "Allows the exporting and importing of the tokens of items across module, file, and crate boundaries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
macro_magic_macros = { version = "0.1.7", path = "./macros" }
macro_magic_core = { version = "0.1.7", path = "./core" }

[dev-dependencies]
mm_example_crate = { path = "./tests/example_crate" }
mm_example_proc_macro = { path = "./tests/example_proc_macro" }
mm_example_crate2 = { path = "./tests/example_crate2" }

[features]
default = []
verbose = [
    "macro_magic_macros/verbose",
    "macro_magic_core/verbose",
]
indirect = [
    "macro_magic_core/indirect",
    "macro_magic_macros/indirect",
    # "mm_example_proc_macro/indirect",
    # "mm_example_crate/indirect",
    # "mm_example_crate2/indirect",
]
indirect-write = [
    "macro_magic_macros/indirect-write",
    "macro_magic_core/indirect-write",
    # "mm_example_proc_macro/indirect-write",
    # "mm_example_crate/indirect-write",
    # "mm_example_crate2/indirect-write",
]
indirect-read = [
    "macro_magic_macros/indirect-read",
    "macro_magic_core/indirect-read",
    # "mm_example_proc_macro/indirect-read",
    # "mm_example_crate/indirect-read",
    # "mm_example_crate2/indirect-read",
]
