[package]
name = "macro_magic_core"
version = "0.3.4"
edition = "2021"
description = "Core implementation behind macro_magic"
repository = "https://github.com/sam0x17/macro_magic"
homepage = "https://sam0x17.dev"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
derive-syn-parse = "0.1.5"
proc-macro2 = "1"
macro_magic_core_macros = { version = "0.3.4", path = "../core_macros" }
prettyplease = { version = "0.2.4", optional = true }
libc-print = { version  = "0.1", optional = true }

[features]
default = []
pretty_print = ["dep:prettyplease", "dep:libc-print"]
