[package]
name = "macro_magic_core"
version = "0.5.1"
edition = "2021"
description = "Core implementation behind macro_magic"
repository = "https://github.com/sam0x17/macro_magic"
homepage = "https://sam0x17.dev"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
derive-syn-parse = "0.2"
proc-macro2 = "1"
macro_magic_core_macros = { version = "0.5.1", path = "../core_macros" }
const-random = "0.1.15"

[features]
default = []
