[package]
name = "macro_magic_core_macros"
version = "0.2.5"
edition = "2021"
description = "Support macros for macro_magic_core"
repository = "https://github.com/sam0x17/macro_magic"
homepage = "https://sam0x17.dev"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
