[package]
name = "macro_magic_core_macros"
version = "0.5.1"
edition = "2021"
description = "Support macros for macro_magic_core"
repository = "https://github.com/sam0x17/macro_magic"
homepage = "https://sam0x17.dev"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
