[package]
name = "level2_macros"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
level1_macros = { version = "*", path = "../level1_macros" }
macro_helpers = { version = "*", path = "../macro_helpers" }
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
