[package]
name = "macro_magic_macros"
version = "0.1.6"
edition = "2021"
description = "Proc-macro sub-crate for macro_magic"
repository = "https://github.com/sam0x17/macro_magic"
homepage = "https://sam0x17.dev"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
macro_magic_core = { version = "0.1.6", path = "../core"}
