[package]
name = "example_crate"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_magic = { version = "*", path = "../../" }

[features]
default = []
indirect = ["macro_magic/indirect"]
