[package]
name = "mm_example_crate"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/sam0x17/macro_magic"
description = "part of macro_magic"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_magic = { version = "0.1.3", path = "../../" }

[features]
default = []
indirect = ["macro_magic/indirect"]
indirect-write = ["macro_magic/indirect-write"]
indirect-read = ["macro_magic/indirect-read"]
