[package]
name = "mm_example_crate2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_magic = { version = "0.1.0", path = "../../" }

[features]
default = []
indirect = ["macro_magic/indirect"]
