[package]
name = "mm_example_proc_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_magic = { version = "0.1.0", path = "../../" }
mm_example_crate = { version = "0.1.0", path = "../example_crate" }

[features]
default = []
indirect = ["macro_magic/indirect", "mm_example_crate/indirect"]
