[package]
name = "mm_example_proc_macro"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/sam0x17/macro_magic"
description = "part of macro_magic"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_magic = { version = "*", path = "../../" }
mm_example_crate = { version = "0.1.1", path = "../example_crate" }

[features]
default = []
indirect = ["macro_magic/indirect", "mm_example_crate/indirect"]
